--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "Netsyos\\Common": "src/"
+            "Netsyos\\Common\\": "src/"
         }
     },
     "minimum-stability": "dev",
